--- a/Timeline/Properties/Resources.resx
+++ b/Timeline/Properties/Resources.resx
@@ -121,6 +121,18 @@
   <data name="Added" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Added.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="AttachmentAdd" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AttachmentAdd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="AttachmentRemove" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\AttachmentRemove.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ChangesetAdd" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ChangesetAdd.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
+  <data name="ChangesetRemove" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\ChangesetRemove.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Deleted" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Deleted.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
