--- a/Timeline/Properties/Resources.resx
+++ b/Timeline/Properties/Resources.resx
@@ -133,6 +133,9 @@
   <data name="ChangesetRemove" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\ChangesetRemove.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
+  <data name="Close" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\Close.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  </data>
   <data name="Deleted" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\Deleted.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
